# flutter_edflib

./: .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
ios/: flutter_edflib.podspec
ios/Classes/: flutter_edflib.c
lib/: flutter_edflib.dart  flutter_edflib_bindings_generated.dart
lib/src/: annotations_mode.dart  bindings.dart  dylib.dart  edf_reader.dart  edf_writer.dart  file_type.dart  version.dart
src/: CMakeLists.txt  edflib.c  edflib.h  flutter_edflib.c
